Last Commit for the Release 1.1.0